# eternalQuestion

./: .env.example  .gitignore  PLAN.md  README.md  pyproject.toml
config/: models.json
docs/: MARKETING.md  SETUP.md
scripts/: run.sh  run_dashboard.sh  run_research.py  run_supabase_exporter.sh  start_vllm.sh  stop.sh  supabase_schema.sql
src/: autoresearch.py  db.py  debate.py  expander.py  lenses.py  llm_client.py  logger_setup.py  mcts.py  orchestrator.py  research.py  supabase_exporter.py
web/: next.config.mjs  package-lock.json  package.json
web/app/: globals.css  layout.tsx  page.tsx
web/app/api/candidates/: route.ts
web/app/api/dashboard/: route.ts
web/app/api/evaluations/: route.ts
web/app/api/events/: route.ts
web/app/api/health/: route.ts
web/lib/: db.ts  supabase.ts
